# happy-24-days-learn-rust

./: Cargo.toml  films_list.csv  readme.md
src/: day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  main.rs
