[package]
name = "rust-24-days-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "~0.2.14"
num = "~0.1.36"
permutohedron = "~0.2.2"
primal = "~0.2.3"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"
docopt = "1.1.1"
hyper = { version = "0.14.12", features = ["server","client"] }